libs/extractor/tests/snapshots/snapshots/extractor__tests__member_expression_style.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\nconst colors = { primary: \"blue\", secondary: \"red\" };\nconst key = \"primary\";\n<Box bg={colors[key]} />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "colors[key]",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nconst colors = {\n\tprimary: \"blue\",\n\tsecondary: \"red\"\n};\nconst key = \"primary\";\n<div className=\"a-a\" style={{ \"--a\": colors[key] }} />;\n",
}
